Construct Tree algorithm, Do no pad 0 in front!