@@ -29,13 +29,13 @@ public class GitHashObjectCli implements Callable<Integer> {
     @Override
     public Integer call() {
         try {
-            var content = Files.readString(Path.of(objPath));
+            var content = Files.readAllBytes(Path.of(objPath));
             var curRepo = GitRepository.findGitRepo();
             var gitObject = switch (format) {
-                case blob -> new GitBlob(curRepo, content.getBytes());
-                case commit -> new GitCommit(curRepo, content.getBytes());
-                case tag -> new GitTag(curRepo, content.getBytes());
-                case tree -> new GitTree(curRepo, content.getBytes());
+                case blob -> new GitBlob(curRepo, content);
+                case commit -> new GitCommit(curRepo, content);
+                case tag -> new GitTag(curRepo, content);
+                case tree -> new GitTree(curRepo, content);
             };
             var computedHash = writeGitObject(gitObject, write);
             printLog("Object hash is: " + computedHash, MsgLevel.INFO);
